fix: Corrige font

--- a/src/app/pages/turmas/turmas.component.html
+++ b/src/app/pages/turmas/turmas.component.html
@@ -1,5 +1,5 @@
 <div class="main">
-    <h1 class="d-flex justify-content-center fw-semibold fs-2">Turmas</h1>
+    <h1 class="d-flex justify-content-center fw-medium fs-2">Turmas</h1>
     <div class="card mx-4">
         <h2 class="titulo-card">Cadastro de Turmas</h2>
         <div class="container">
